--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,15 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
-                        "assets": ["src/favicon.ico", "src/assets"],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets",
+                            {
+                                "glob": "**/*",
+                                "input": "./src/app/components/tibia/assets",
+                                "output": "/assets/"
+                            }
+                        ],
                         "styles": ["src/styles.scss"],
                         "scripts": []
                     },
